# sol-verificaC19-sdk-cpp-linux

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  sol-verificaC19-sdk-cpp-linux.doxyfile
doc/html/: AllProvider_8h_source.html  CRLProviderItaly_8h_source.html  CRLProviderItaly_8hpp_source.html  CRLProviderTest_8h_source.html  CRLProviderTest_8hpp_source.html  CRLProvider_8h_source.html  CRLStorageFile_8h_source.html  CRLStorageFile_8hpp_source.html  CRLStorageMemory_8h_source.html  CRLStorageMemory_8hpp_source.html  CRLStorage_8h_source.html  CertificateModel_8hpp_source.html  CertificateSimple_8h_source.html  CertificateSimple_8hpp_source.html  CertificateStatus_8h_source.html  CertificateStatus_8hpp_source.html  DGCRulesKeysUpdater_8h_source.html  DGCRulesKeysUpdater_8hpp_source.html  DGCUpdater_8h_source.html  DGCUpdater_8hpp_source.html  DGCVerifier_8h_source.html  DGCVerifier_8hpp_source.html  IAllProvider_8hpp_source.html  ICRLProvider_8hpp_source.html  ICRLStorage_8hpp_source.html  IKeysProvider_8hpp_source.html  IKeysStorage_8hpp_source.html  ILogger_8hpp_source.html  IRulesKeysProvider_8hpp_source.html  IRulesProvider_8hpp_source.html  IRulesStorage_8hpp_source.html  KeysProviderItaly_8h_source.html  KeysProviderItaly_8hpp_source.html  KeysProviderTest_8h_source.html  KeysProviderTest_8hpp_source.html  KeysProvider_8h_source.html  KeysStorageFile_8h_source.html  KeysStorageFile_8hpp_source.html  KeysStorageMemory_8h_source.html  KeysStorageMemory_8hpp_source.html  (+209 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+18 more)
examples/: verificaC19-sdk-client.cpp  verificaC19-sdk-example.cpp
examples/c/: verificaC19-sdk-client.c  verificaC19-sdk-example.c
examples/crl-provider/: CRLProviderItaly.cpp  CRLProviderItaly_c.cpp  CRLProviderTest.cpp  CRLProviderTest_c.cpp  CRLProvider_c.cpp
examples/crl-storage/: CRLStorageFile.cpp  CRLStorageFile_c.cpp  CRLStorageMemory.cpp  CRLStorageMemory_c.cpp  CRLStorage_c.cpp
examples/keys-provider/: KeysProviderItaly.cpp  KeysProviderItaly.h  KeysProviderItaly.hpp  KeysProviderItaly_c.cpp  KeysProviderTest.cpp  KeysProviderTest.h  KeysProviderTest.hpp  KeysProviderTest_c.cpp  KeysProvider_c.cpp
examples/keys-storage/: KeysStorageFile.cpp  KeysStorageFile.h  KeysStorageFile.hpp  KeysStorageFile_c.cpp  KeysStorageMemory.cpp  KeysStorageMemory.h  KeysStorageMemory.hpp  KeysStorageMemory_c.cpp  KeysStorage_c.cpp
examples/loggers/: LoggerStdout.cpp  LoggerStdout.h  LoggerStdout.hpp  LoggerStdout_c.cpp
examples/rules-provider/: RulesProviderItaly.cpp  RulesProviderItaly.h  RulesProviderItaly.hpp  RulesProviderItaly_c.cpp  RulesProviderTest.cpp  RulesProviderTest.h  RulesProviderTest.hpp  RulesProviderTest_c.cpp  RulesProvider_c.cpp
examples/rules-storage/: RulesStorageFile.cpp  RulesStorageFile.h  RulesStorageFile.hpp  RulesStorageFile_c.cpp  RulesStorageMemory.cpp  RulesStorageMemory.h  RulesStorageMemory.hpp  RulesStorageMemory_c.cpp  RulesStorage_c.cpp
include/verificaC19-sdk/: DGCRulesKeysUpdater.h  DGCRulesKeysUpdater.hpp  DGCUpdater.h  DGCUpdater.hpp  DGCVerifier.h  DGCVerifier.hpp
include/verificaC19-sdk/examples/crl-provider/: CRLProviderItaly.h  CRLProviderItaly.hpp  CRLProviderTest.h  CRLProviderTest.hpp
include/verificaC19-sdk/examples/crl-storage/: CRLStorageFile.h  CRLStorageFile.hpp  CRLStorageMemory.h  CRLStorageMemory.hpp
include/verificaC19-sdk/examples/keys-provider/: KeysProviderItaly.h  KeysProviderItaly.hpp  KeysProviderTest.h  KeysProviderTest.hpp
include/verificaC19-sdk/examples/keys-storage/: KeysStorageFile.h  KeysStorageFile.hpp  KeysStorageMemory.h  KeysStorageMemory.hpp
include/verificaC19-sdk/examples/loggers/: LoggerStdout.h  LoggerStdout.hpp
include/verificaC19-sdk/examples/rules-provider/: RulesProviderItaly.h  RulesProviderItaly.hpp  RulesProviderTest.h  RulesProviderTest.hpp
include/verificaC19-sdk/examples/rules-storage/: RulesStorageFile.h  RulesStorageFile.hpp  RulesStorageMemory.h  RulesStorageMemory.hpp
include/verificaC19-sdk/interfaces/: AllProvider.h  CRLProvider.h  CRLStorage.h  IAllProvider.hpp  ICRLProvider.hpp  ICRLStorage.hpp  IKeysProvider.hpp  IKeysStorage.hpp  ILogger.hpp  IRulesKeysProvider.hpp  IRulesProvider.hpp  IRulesStorage.hpp  KeysProvider.h  KeysStorage.h  LogLevel.h  Logger.h  RulesKeysProvider.h  RulesProvider.h  RulesStorage.h
include/verificaC19-sdk/models/: CertificateModel.hpp  CertificateSimple.h  CertificateSimple.hpp  CertificateStatus.h  CertificateStatus.hpp
verificaC19-sdk/: DGCRulesKeysUpdater.cpp  DGCUpdater.cpp  DGCUpdater_c.cpp  DGCVerifier.cpp  DGCVerifier_c.cpp
